--- a/recipe.ipynb
+++ b/recipe.ipynb
@@ -27,18 +27,115 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import json\n",
+    "\n",
+    "# File to store recipes\n",
+    "RECIPE_FILE = \"recipes.json\"\n",
+    "\n",
+    "# Load recipes from file\n",
+    "def load_recipes():\n",
+    "    try:\n",
+    "        with open(RECIPE_FILE, \"r\") as file:\n",
+    "            return json.load(file)\n",
+    "    except (FileNotFoundError, json.JSONDecodeError):\n",
+    "        return {}\n",
+    "\n",
+    "# Save recipes to file\n",
+    "def save_recipes(recipes):\n",
+    "    with open(RECIPE_FILE, \"w\") as file:\n",
+    "        json.dump(recipes, file, indent=4)\n",
+    "\n",
+    "# Add a new recipe\n",
+    "def add_recipe(recipes):\n",
+    "    name = input(\"Enter the recipe name: \").strip().lower()\n",
+    "    if name in recipes:\n",
+    "        print(\"This recipe already exists!\")\n",
+    "        return\n",
+    "\n",
+    "    ingredients = input(\"Enter the ingredients (comma-separated): \").strip().lower().split(\",\")\n",
+    "    steps = input(\"Enter the cooking steps: \").strip()\n",
+    "\n",
+    "    recipes[name] = {\n",
+    "        \"ingredients\": [ingredient.strip() for ingredient in ingredients],\n",
+    "        \"steps\": steps\n",
+    "    }\n",
+    "    save_recipes(recipes)\n",
+    "    print(f\"Recipe '{name}' added successfully!\")\n",
+    "\n",
+    "# Find recipes based on available ingredients\n",
+    "def find_recipes(recipes):\n",
+    "    if not recipes:\n",
+    "        print(\"No recipes available! Add some first.\")\n",
+    "        return\n",
+    "\n",
+    "    available_ingredients = input(\"Enter the ingredients you have (comma-separated): \").strip().lower().split(\",\")\n",
+    "    available_ingredients = [ingredient.strip() for ingredient in available_ingredients]\n",
+    "\n",
+    "    matches = []\n",
+    "    for name, details in recipes.items():\n",
+    "        missing_ingredients = [ing for ing in details[\"ingredients\"] if ing not in available_ingredients]\n",
+    "        matches.append((name, missing_ingredients))\n",
+    "\n",
+    "    # Sort recipes by the number of missing ingredients\n",
+    "    matches.sort(key=lambda x: len(x[1]))\n",
+    "\n",
+    "    print(\"\\nRecipe Recommendations:\")\n",
+    "    for name, missing in matches:\n",
+    "        print(f\"- {name.title()} (Missing Ingredients: {', '.join(missing) if missing else 'None'})\")\n",
+    "\n",
+    "# View recipe details\n",
+    "def view_recipe(recipes):\n",
+    "    name = input(\"Enter the recipe name to view: \").strip().lower()\n",
+    "    if name not in recipes:\n",
+    "        print(\"Recipe not found!\")\n",
+    "        return\n",
+    "\n",
+    "    recipe = recipes[name]\n",
+    "    print(f\"\\n{name.title()} Recipe:\")\n",
+    "    print(\"Ingredients:\", \", \".join(recipe[\"ingredients\"]))\n",
+    "    print(\"Steps:\", recipe[\"steps\"])\n",
+    "\n",
+    "# Main menu\n",
+    "def main():\n",
+    "    recipes = load_recipes()\n",
+    "\n",
+    "    while True:\n",
+    "        print(\"\\nRecipe Recommendation System\")\n",
+    "        print(\"1. Add Recipe\")\n",
+    "        print(\"2. Find Recipes\")\n",
+    "        print(\"3. View Recipe Details\")\n",
+    "        print(\"4. Exit\")\n",
+    "        choice = input(\"Choose an option: \").strip()\n",
+    "\n",
+    "        if choice == \"1\":\n",
+    "            add_recipe(recipes)\n",
+    "        elif choice == \"2\":\n",
+    "            find_recipes(recipes)\n",
+    "        elif choice == \"3\":\n",
+    "            view_recipe(recipes)\n",
+    "        elif choice == \"4\":\n",
+    "            print(\"Goodbye!\")\n",
+    "            break\n",
+    "        else:\n",
+    "            print(\"Invalid choice! Please try again.\")\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
