Recipe Recommendation System

--- a/recipe.ipynb
+++ b/recipe.ipynb
@@ -183,13 +183,13 @@
    "metadata": {},
    "source": [
     "#### Possible Enhancements:(YET TO IMPLEMENT)\n",
-    "Nutritional Information\n",
+    "##### Nutritional Information\n",
     "Display calorie count and other nutritional data for each recipe.\n",
-    "Custom Preferences\n",
+    "##### Custom Preferences\n",
     "Allow filtering by cuisine type, dietary restrictions, or difficulty level.\n",
-    "Random Recipe Feature\n",
+    "##### Random Recipe Feature\n",
     "Suggest a random recipe if the user is unsure what to cook.\n",
-    "Integration with an API\n",
+    "##### Integration with an API\n",
     "Use a recipe API (e.g., Spoonacular) to fetch more recipes dynamically."
    ]
   }
